--- a/src/App.css
+++ b/src/App.css
@@ -2,26 +2,32 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+body{
+  background-color: #f6f1de;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #000000;
+}
+
+.App-logo {
+  width: 250px;
+  height: auto;
+  transform: translateY(-1cm);
+}
+
+.iniciar {
+  position: fixed;
+  top: 75%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #f1f1f1;
+  padding: 20px;
+  font-family: var(--font-texto);
+  border-radius: 2em;
 }
 
 .App-link {
@@ -32,7 +38,14 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
+  }
+}
+
+@media (max-width: 480) {
+  .App-logo {
+    height: 2em;
   }
 }
