--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ code {
 }
 
 body{
-  background-color: #f6f1de;
+  background-image: linear-gradient(#f6f1de, #f1f1f1);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -31,6 +31,9 @@ body{
   width: 250px;
   height: auto;
   transform: translateY(-1cm);
+  animation: App-logo-spin infinite 20s linear, fadeIn 1.5s ease-in-out;
+  box-shadow: 0px 4px 30px rgba(255, 255, 255, 0.3), 0px 0px 60px rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
 }
 
 .iniciar {
@@ -42,6 +45,11 @@ body{
   padding: 20px;
   font-family: var(--font-texto);
   border-radius: 2em;
+  border: 1px solid #00000027;
+  font-size: 20px;
+  animation: slideUp 2s ease-out;
+  box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.2), 0px 0px 40px rgba(0, 0, 0, 0.1);
+  background: linear-gradient(45deg, #f6f1de, #ffad60);
 }
 
 .App-link {
@@ -55,6 +63,26 @@ body{
 
   to {
     transform: rotate(360deg);
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes slideUp {
+  0% {
+    transform: translate(-50%, 100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translate(-50%, -50%);
+    opacity: 1;
   }
 }
 
